[package]
name = "sorted_intersection"
version = "0.1.0"
authors = ["VictorBulba"]
edition = "2018"
license = "MIT"
repository = "https://github.com/VictorBulba/sorted_intersection"
description = "Intersection Iterator Over Sorted Iterators"
keywords = ["intersection", "iterator"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
