[package]
name = "sorted_intersection"
version = "1.2.0"
authors = ["VictorBulba"]
edition = "2018"
license = "MIT"
repository = "https://github.com/VictorBulba/sorted_intersection"
description = "Intersection Iterator Over Sorted Iterators"
readme = "README.md"
keywords = ["intersection", "iterator"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
